Colaboratory를 통해 생성됨

--- a/5_RegularExpression_Revised.ipynb
+++ b/5_RegularExpression_Revised.ipynb
@@ -140,6 +140,7 @@
         "text = \"cat, hat, bat, sat, mat, combat, unbated\"\n",
         "pattern = r\".at\"  # .은 어떤 문자든 하나를 나타냄\n",
         "\n",
+        "\n",
         "matches = re.findall(pattern, text)\n",
         "\n",
         "for match in matches:\n",
@@ -343,6 +344,37 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is a popular programming language. Python is versatile.\"\n",
+        "pattern = r'versatile.$'\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "t3H4cVZtmH_1",
+        "outputId": "fad7a651-4cc4-4ed2-9861-4bac06f13712",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: versatile.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#4a. 💣💊COMPARE\n",
         "\n",
         "import re\n",
@@ -376,6 +408,37 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is a popular programming language. Python is versatile.\"\n",
+        "pattern = r\"tile.$\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "  print(\"Match:\",i)"
+      ],
+      "metadata": {
+        "id": "1Mj545zymvd4",
+        "outputId": "02692f9d-1be8-4ad6-a9df-d0bb667d7035",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: tile.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#4a 💣💊COMPARE\n",
         "\n",
         "import re\n",
@@ -394,6 +457,25 @@
         "id": "qdiO4w2-yl89"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is a popular programming language. Python is versatile.\"\n",
+        "pattern = r\"language.$\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "BcihVYzqnUH1"
+      },
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -431,6 +513,37 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is a programming language. Python is versatile. We all love Python.\"\n",
+        "pattern = r'^Python'\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "yPtnOOldnrCn",
+        "outputId": "56c50c86-39d6-48d8-b008-661da038920a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: Python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#5a 💣💊COMPARE\n",
         "\n",
         "import re\n",
@@ -449,6 +562,25 @@
         "id": "P11daD1282TS"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"Python is a programming language. Python is versatile. We all love Python.\"\n",
+        "pattern = r'^is'\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "fZEp9q4mobxQ"
+      },
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -489,6 +621,39 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"cat, caat, caaat, sat, set\"\n",
+        "pattern = r\"ca+t\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "FX7WldRJosOj",
+        "outputId": "adbc5d5a-b4fc-4ddf-c97d-65c553affa64",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: cat\n",
+            "Match: caat\n",
+            "Match: caaat\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#6a 💣💊COMPARE [Get students' script modified in line 6 as of 24OCT23]\n",
         "\n",
         "import re\n",
@@ -509,6 +674,40 @@
         "outputId": "d70e1c46-77d1-420a-9a27-b6d6e7fd425e"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: at\n",
+            "Match: aat\n",
+            "Match: aaat\n",
+            "Match: at\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"cat, caat, caaat, sat, set\"\n",
+        "pattern = r\"a+t\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "aUkFrlA_paml",
+        "outputId": "aa02b43d-ad29-49b6-d6e4-ebc6f0072b91",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -579,6 +778,42 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"123 4567 89 12345\"\n",
+        "pattern = r\"\\d{2}\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "FRMrwpTlp3nE",
+        "outputId": "4ba89bf4-0ae7-46b4-9d3f-84c9791f57f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: 12\n",
+            "Match: 45\n",
+            "Match: 67\n",
+            "Match: 89\n",
+            "Match: 12\n",
+            "Match: 34\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#8. {숫자, 숫자} (뜻: 첫번째 숫자에서 두번째 숫자 자리수까지 검색) 예시\n",
         "\n",
         "import re\n",
@@ -599,6 +834,41 @@
         "outputId": "b5de13ec-6c2e-4967-cdad-100b8d4a5535"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: 12345\n",
+            "Match: 67899\n",
+            "Match: 12345\n",
+            "Match: 987\n",
+            "Match: 56789\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"The numbers are 12345678999, 12345, 987, and 56789.\"\n",
+        "pattern = r\"\\d{3,5}\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "RXziOiG8qeMg",
+        "outputId": "4a7d627c-2603-4161-8f66-fe3663795a31",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -649,6 +919,37 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"The word 'hello' is repeated many times: hello hello hello hello hello\"\n",
+        "pattern = r\"(hello ){2,}\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "TeUdiS4YsrPd",
+        "outputId": "1bdf241b-39af-4df4-d9b9-04243049ccc6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: hello \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#9a. 💣💊COMPARE\n",
         "\n",
         "import re\n",
@@ -669,6 +970,39 @@
         "outputId": "6ebe7bf0-b30e-48e2-9f8a-c19bf6debc8a"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: hello\n",
+            "Match: hello\n",
+            "Match: hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"The word 'hello' is repeated many times: hellohellohellohellohello hellohellohellohellohello hellohellohellohellohello\"\n",
+        "pattern = r\"(hello){2,}\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "hz_OQwprsdWS",
+        "outputId": "01524ac3-60ad-4636-b505-14a24133f931",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -720,6 +1054,37 @@
     {
       "cell_type": "code",
       "source": [
+        "text = \"The price is $100.\"\n",
+        "pattern = r\"[\\d]\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "UCNVqHH5sgtB",
+        "outputId": "38f4ee21-6242-47bc-a9f9-3d68b9a35faa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: 1\n",
+            "Match: 0\n",
+            "Match: 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 10a. 💣💊COMPARE [\\d]  (뜻: [ ]는 [ ]대괄호 안의 문자들 중 한 개의 숫자와 일치)예시 [Get students' code cell inserted)\n",
         "import re\n",
         "\n",
@@ -741,6 +1106,41 @@
         }
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: e\n",
+            "Match: e\n",
+            "Match: 1\n",
+            "Match: 0\n",
+            "Match: 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"The price is $100.\"\n",
+        "pattern = r\"[e\\d]\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "JKF_Wq_8vy7B",
+        "outputId": "a65b0df7-6a1a-4872-c22c-ff5e0a737f2c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -800,6 +1200,40 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"I like #5.\"\n",
+        "pattern = r\"[abcdefghijklmnopqstuvwxyz]\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "lIENvetOv34H",
+        "outputId": "8df59748-0c25-4f9f-e7c4-53db835e0b18",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: l\n",
+            "Match: i\n",
+            "Match: k\n",
+            "Match: e\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#12. [a-z] (뜻: 'a'부터 'z'까지의 모든 소문자 글자와 일치) 예시\n",
         "\n",
         "import re\n",
@@ -820,6 +1254,70 @@
         "outputId": "4688edc1-46fb-4dd4-e4d4-d25fa13e1a47"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: h\n",
+            "Match: e\n",
+            "Match: q\n",
+            "Match: u\n",
+            "Match: i\n",
+            "Match: c\n",
+            "Match: k\n",
+            "Match: b\n",
+            "Match: r\n",
+            "Match: o\n",
+            "Match: w\n",
+            "Match: n\n",
+            "Match: f\n",
+            "Match: o\n",
+            "Match: x\n",
+            "Match: j\n",
+            "Match: u\n",
+            "Match: m\n",
+            "Match: p\n",
+            "Match: s\n",
+            "Match: o\n",
+            "Match: v\n",
+            "Match: e\n",
+            "Match: r\n",
+            "Match: t\n",
+            "Match: h\n",
+            "Match: e\n",
+            "Match: l\n",
+            "Match: a\n",
+            "Match: z\n",
+            "Match: y\n",
+            "Match: d\n",
+            "Match: o\n",
+            "Match: g\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"The quick brown fox jumps over the lazy dog.\"\n",
+        "pattern = r\"[a-z]\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "cdzKuCNewgfL",
+        "outputId": "419cee25-fcbb-4370-97d7-8dea8ca68cba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -907,6 +1405,45 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"\\\"The book titles are 'The Aesop for Children', 'Harry Potter', and 'Pride and Prejudice',\\\" said Amelia.\"\n",
+        "pattern = r\"[A-Z]\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "VhzfCeVDxQZj",
+        "outputId": "f7ac11c2-af03-4202-fa45-3ace999b7794",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: T\n",
+            "Match: T\n",
+            "Match: A\n",
+            "Match: C\n",
+            "Match: H\n",
+            "Match: P\n",
+            "Match: P\n",
+            "Match: P\n",
+            "Match: A\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#14. [a-zA-Z] (뜻:  알파벳(대소문자 구분 없이) 모든 문자와 일치) 예시\n",
         "\n",
         "import re\n",
@@ -927,6 +1464,59 @@
         "outputId": "5c7caf5e-217d-4d4d-b1c7-ad92c5587153"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: N\n",
+            "Match: e\n",
+            "Match: w\n",
+            "Match: Y\n",
+            "Match: o\n",
+            "Match: r\n",
+            "Match: k\n",
+            "Match: i\n",
+            "Match: s\n",
+            "Match: a\n",
+            "Match: w\n",
+            "Match: o\n",
+            "Match: n\n",
+            "Match: d\n",
+            "Match: e\n",
+            "Match: r\n",
+            "Match: f\n",
+            "Match: u\n",
+            "Match: l\n",
+            "Match: c\n",
+            "Match: i\n",
+            "Match: t\n",
+            "Match: y\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"New York is a wonderful city.\"\n",
+        "pattern = r\"[a-zA-Z]\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "s6rfL34Sxwqj",
+        "outputId": "9b2b137a-4095-431f-a361-62118ac4c08a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
