Colaboratory를 통해 생성됨

--- a/5_RegularExpression_Revised.ipynb
+++ b/5_RegularExpression_Revised.ipynb
@@ -355,11 +355,11 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "t3H4cVZtmH_1",
-        "outputId": "fad7a651-4cc4-4ed2-9861-4bac06f13712",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "t3H4cVZtmH_1",
+        "outputId": "fad7a651-4cc4-4ed2-9861-4bac06f13712"
       },
       "execution_count": 1,
       "outputs": [
@@ -419,11 +419,11 @@
         "  print(\"Match:\",i)"
       ],
       "metadata": {
-        "id": "1Mj545zymvd4",
-        "outputId": "02692f9d-1be8-4ad6-a9df-d0bb667d7035",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1Mj545zymvd4",
+        "outputId": "02692f9d-1be8-4ad6-a9df-d0bb667d7035"
       },
       "execution_count": 2,
       "outputs": [
@@ -524,11 +524,11 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "yPtnOOldnrCn",
-        "outputId": "56c50c86-39d6-48d8-b008-661da038920a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yPtnOOldnrCn",
+        "outputId": "56c50c86-39d6-48d8-b008-661da038920a"
       },
       "execution_count": 6,
       "outputs": [
@@ -632,11 +632,11 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "FX7WldRJosOj",
-        "outputId": "adbc5d5a-b4fc-4ddf-c97d-65c553affa64",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FX7WldRJosOj",
+        "outputId": "adbc5d5a-b4fc-4ddf-c97d-65c553affa64"
       },
       "execution_count": 9,
       "outputs": [
@@ -701,11 +701,11 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "aUkFrlA_paml",
-        "outputId": "aa02b43d-ad29-49b6-d6e4-ebc6f0072b91",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aUkFrlA_paml",
+        "outputId": "aa02b43d-ad29-49b6-d6e4-ebc6f0072b91"
       },
       "execution_count": 10,
       "outputs": [
@@ -789,11 +789,11 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "FRMrwpTlp3nE",
-        "outputId": "4ba89bf4-0ae7-46b4-9d3f-84c9791f57f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FRMrwpTlp3nE",
+        "outputId": "4ba89bf4-0ae7-46b4-9d3f-84c9791f57f2"
       },
       "execution_count": 13,
       "outputs": [
@@ -862,11 +862,11 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "RXziOiG8qeMg",
-        "outputId": "4a7d627c-2603-4161-8f66-fe3663795a31",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RXziOiG8qeMg",
+        "outputId": "4a7d627c-2603-4161-8f66-fe3663795a31"
       },
       "execution_count": 12,
       "outputs": [
@@ -930,11 +930,11 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "TeUdiS4YsrPd",
-        "outputId": "1bdf241b-39af-4df4-d9b9-04243049ccc6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TeUdiS4YsrPd",
+        "outputId": "1bdf241b-39af-4df4-d9b9-04243049ccc6"
       },
       "execution_count": 16,
       "outputs": [
@@ -996,11 +996,11 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "hz_OQwprsdWS",
-        "outputId": "01524ac3-60ad-4636-b505-14a24133f931",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hz_OQwprsdWS",
+        "outputId": "01524ac3-60ad-4636-b505-14a24133f931"
       },
       "execution_count": 18,
       "outputs": [
@@ -1063,11 +1063,11 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "UCNVqHH5sgtB",
-        "outputId": "38f4ee21-6242-47bc-a9f9-3d68b9a35faa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UCNVqHH5sgtB",
+        "outputId": "38f4ee21-6242-47bc-a9f9-3d68b9a35faa"
       },
       "execution_count": 15,
       "outputs": [
@@ -1134,11 +1134,11 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "JKF_Wq_8vy7B",
-        "outputId": "a65b0df7-6a1a-4872-c22c-ff5e0a737f2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JKF_Wq_8vy7B",
+        "outputId": "a65b0df7-6a1a-4872-c22c-ff5e0a737f2c"
       },
       "execution_count": 19,
       "outputs": [
@@ -1211,11 +1211,11 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "lIENvetOv34H",
-        "outputId": "8df59748-0c25-4f9f-e7c4-53db835e0b18",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lIENvetOv34H",
+        "outputId": "8df59748-0c25-4f9f-e7c4-53db835e0b18"
       },
       "execution_count": 21,
       "outputs": [
@@ -1311,11 +1311,11 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "cdzKuCNewgfL",
-        "outputId": "419cee25-fcbb-4370-97d7-8dea8ca68cba",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cdzKuCNewgfL",
+        "outputId": "419cee25-fcbb-4370-97d7-8dea8ca68cba"
       },
       "execution_count": 22,
       "outputs": [
@@ -1416,11 +1416,11 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "VhzfCeVDxQZj",
-        "outputId": "f7ac11c2-af03-4202-fa45-3ace999b7794",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VhzfCeVDxQZj",
+        "outputId": "f7ac11c2-af03-4202-fa45-3ace999b7794"
       },
       "execution_count": 23,
       "outputs": [
@@ -1510,11 +1510,11 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "s6rfL34Sxwqj",
-        "outputId": "9b2b137a-4095-431f-a361-62118ac4c08a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s6rfL34Sxwqj",
+        "outputId": "9b2b137a-4095-431f-a361-62118ac4c08a"
       },
       "execution_count": 24,
       "outputs": [
@@ -1580,6 +1580,36 @@
             "Match: 1\n",
             "Match: 4\n",
             "Match: 9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"A total of 7 episodes of The Aesop for Children.\"\n",
+        "pattern = r\"[0-9]\"\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "mOQqlNdQx-kW",
+        "outputId": "8790b7b3-e796-4f92-9822-cc0b08937add",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: 7\n"
           ]
         }
       ]
