Colaboratory를 통해 생성됨

--- a/5_RegularExpression_Revised.ipynb
+++ b/5_RegularExpression_Revised.ipynb
@@ -1589,7 +1589,7 @@
       "source": [
         "import re\n",
         "\n",
-        "text = \"A total of 7 episodes of The Aesop for Children.\"\n",
+        "text = \"A total of 147 episodes of The Aesop for Children.\"\n",
         "pattern = r\"[0-9]\"\n",
         "matches = re.findall(pattern, text)\n",
         "\n",
@@ -1597,18 +1597,20 @@
         "    print(\"Match:\", i)"
       ],
       "metadata": {
-        "id": "mOQqlNdQx-kW",
-        "outputId": "8790b7b3-e796-4f92-9822-cc0b08937add",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mOQqlNdQx-kW",
+        "outputId": "e99a6bf9-a795-4633-d670-b31beca02b45"
       },
-      "execution_count": 25,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Match: 1\n",
+            "Match: 4\n",
             "Match: 7\n"
           ]
         }
@@ -1652,6 +1654,40 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text=\"In mathematics, 3.14 is a decimal approximation of the mathematical constant pi\"\n",
+        "text = \"In mathematics, 3.14 is a decimal approximation of the mathematical constant π (pi).\"\n",
+        "pattern = r\"[0-9]\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "NRQGY3evyQPh",
+        "outputId": "f4a7a4a1-6f66-4be4-d523-183372c0f69f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: 3\n",
+            "Match: 1\n",
+            "Match: 4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#16. [a-zA-Z0-9] (뜻: 대문자 소문자 구분없이 알파벳과 숫자를 포함하는 모든 문자와 일치) 예시\n",
         "import re\n",
         "\n",
@@ -1671,6 +1707,69 @@
         "outputId": "3722f55a-d8aa-4e76-85d1-4dec97e4f26e"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: 2\n",
+            "Match: 4\n",
+            "Match: H\n",
+            "Match: o\n",
+            "Match: u\n",
+            "Match: r\n",
+            "Match: s\n",
+            "Match: a\n",
+            "Match: D\n",
+            "Match: a\n",
+            "Match: y\n",
+            "Match: 7\n",
+            "Match: D\n",
+            "Match: a\n",
+            "Match: y\n",
+            "Match: s\n",
+            "Match: a\n",
+            "Match: W\n",
+            "Match: e\n",
+            "Match: e\n",
+            "Match: k\n",
+            "Match: 3\n",
+            "Match: 6\n",
+            "Match: 5\n",
+            "Match: D\n",
+            "Match: a\n",
+            "Match: y\n",
+            "Match: s\n",
+            "Match: a\n",
+            "Match: Y\n",
+            "Match: e\n",
+            "Match: a\n",
+            "Match: r\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text = \"24 Hours a Day, 7 Days a Week, & 365 Days a Year!\"\n",
+        "pattern = r\"[a-zA-Z0-9]\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "E6QgAzOGyj3k",
+        "outputId": "044848bf-65dc-4785-e648-8b19f7f9ea9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
