Colaboratory를 통해 생성됨

--- a/5_RegularExpression_Revised.ipynb
+++ b/5_RegularExpression_Revised.ipynb
@@ -361,7 +361,7 @@
         "id": "t3H4cVZtmH_1",
         "outputId": "fad7a651-4cc4-4ed2-9861-4bac06f13712"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -425,7 +425,7 @@
         "id": "1Mj545zymvd4",
         "outputId": "02692f9d-1be8-4ad6-a9df-d0bb667d7035"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +475,7 @@
       "metadata": {
         "id": "BcihVYzqnUH1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -530,7 +530,7 @@
         "id": "yPtnOOldnrCn",
         "outputId": "56c50c86-39d6-48d8-b008-661da038920a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,7 +580,7 @@
       "metadata": {
         "id": "fZEp9q4mobxQ"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -638,7 +638,7 @@
         "id": "FX7WldRJosOj",
         "outputId": "adbc5d5a-b4fc-4ddf-c97d-65c553affa64"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -707,7 +707,7 @@
         "id": "aUkFrlA_paml",
         "outputId": "aa02b43d-ad29-49b6-d6e4-ebc6f0072b91"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -795,7 +795,7 @@
         "id": "FRMrwpTlp3nE",
         "outputId": "4ba89bf4-0ae7-46b4-9d3f-84c9791f57f2"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -868,7 +868,7 @@
         "id": "RXziOiG8qeMg",
         "outputId": "4a7d627c-2603-4161-8f66-fe3663795a31"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -936,7 +936,7 @@
         "id": "TeUdiS4YsrPd",
         "outputId": "1bdf241b-39af-4df4-d9b9-04243049ccc6"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1002,7 +1002,7 @@
         "id": "hz_OQwprsdWS",
         "outputId": "01524ac3-60ad-4636-b505-14a24133f931"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1069,7 +1069,7 @@
         "id": "UCNVqHH5sgtB",
         "outputId": "38f4ee21-6242-47bc-a9f9-3d68b9a35faa"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1140,7 +1140,7 @@
         "id": "JKF_Wq_8vy7B",
         "outputId": "a65b0df7-6a1a-4872-c22c-ff5e0a737f2c"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1217,7 +1217,7 @@
         "id": "lIENvetOv34H",
         "outputId": "8df59748-0c25-4f9f-e7c4-53db835e0b18"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1317,7 +1317,7 @@
         "id": "cdzKuCNewgfL",
         "outputId": "419cee25-fcbb-4370-97d7-8dea8ca68cba"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1422,7 +1422,7 @@
         "id": "VhzfCeVDxQZj",
         "outputId": "f7ac11c2-af03-4202-fa45-3ace999b7794"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1516,7 +1516,7 @@
         "id": "s6rfL34Sxwqj",
         "outputId": "9b2b137a-4095-431f-a361-62118ac4c08a"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1603,7 +1603,7 @@
         "id": "mOQqlNdQx-kW",
         "outputId": "e99a6bf9-a795-4633-d670-b31beca02b45"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1672,7 +1672,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1769,7 +1769,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1902,6 +1902,38 @@
     {
       "cell_type": "code",
       "source": [
+        "import re\n",
+        "\n",
+        "text = \"The color can be either red, green, or blue.\"\n",
+        "pattern = r\"(red|blue)\"\n",
+        "\n",
+        "matches = re.findall(pattern, text)\n",
+        "\n",
+        "for i in matches:\n",
+        "    print(\"Match:\", i)"
+      ],
+      "metadata": {
+        "id": "2eNfYoDo2dNM",
+        "outputId": "40d00f31-16e1-41c4-e6a2-53a05670d259",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match: red\n",
+            "Match: blue\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#20. Understanding difference Escape \\ and Meta characters. e.g., r\"\\$\" vw. r\"$\"\"\n",
         "\n",
         "import re\n",
@@ -1933,6 +1965,47 @@
         "outputId": "4514be16-3163-4b11-e4fc-6f4fbd5acf1f"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Match1: more.\n",
+            "Match2 $7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "text=\"it cost me $715.45 and more.\"\n",
+        "\n",
+        "pattern1 = r\"more.$\"\n",
+        "\n",
+        "matches1 = re.findall(pattern1, text)\n",
+        "\n",
+        "for i in matches1:\n",
+        "  print(\"Match1:\", i)\n",
+        "\n",
+        "\n",
+        "pattern2 = r\"\\$*7\"\n",
+        "\n",
+        "matches2 = re.findall(pattern2, text)\n",
+        "\n",
+        "for i in matches2:\n",
+        "  print(\"Match2\", i)\n"
+      ],
+      "metadata": {
+        "id": "nzjw-HjB3oDs",
+        "outputId": "dbcc6e8c-ba92-4c42-982e-3c10bf51d615",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
